Arrow fix
I fixed the position of the arrows so that the right one doesn't overlap the left one anymore

--- a/css/index.css
+++ b/css/index.css
@@ -150,6 +150,8 @@ html {
 .featured-image {
   position: relative;
   display: inline-block;
+  align-items: center;
+  justify-content: center;
 }
 
 .featured-image img {
@@ -205,19 +207,21 @@ html {
   cursor: pointer;
   position: absolute;
   top: 50%;
+  transform: translateY(-50%);
   padding: 10px 25px;
   border-radius: 50%;
   user-select: none;
 }
 
-.arrow.left img{
-  left: -2%;
-  height: 50px;
-  width: auto;
+.arrow.left {
+  left: 10px;
 }
 
-.arrow.right img{
-  right: -2%;
+.arrow.right {
+  right: 10px;
+}
+
+.arrow img{
   height: 50px;
   width: auto;
 }
